--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,10 @@ services:
   - type: web
     name: stylish-name-bot
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: python stylish_name_bot.py
     envVars:
       - key: TELEGRAM_BOT_TOKEN
-        sync: false 
+        sync: false
+    healthCheckPath: /
+    autoDeploy: true 
