Optimize deployment configuration and add .gitignore

--- a/render.yaml
+++ b/render.yaml
@@ -10,4 +10,16 @@ services:
         sync: false
     healthCheckPath: /
     autoDeploy: true
-    plan: free 
+    plan: free
+    disk:
+      name: data
+      mountPath: /data
+      sizeGB: 1
+    scaling:
+      minInstances: 1
+      maxInstances: 1
+      targetMemoryPercent: 80
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: no-cache 
