--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,11 @@ services:
   - type: web
     name: stylish-name-bot
     env: python
-    pythonVersion: 3.11.0
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: python stylish_name_bot.py
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.0
       - key: TELEGRAM_BOT_TOKEN
         sync: false
     healthCheckPath: /
