--- a/render.yaml
+++ b/render.yaml
@@ -1,26 +1,17 @@
 services:
   - type: web
-    name: stylish-name-bot
+    name: fontbo
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: python stylish_name_bot.py
-    autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.0
-      - key: TELEGRAM_BOT_TOKEN
-        sync: false
+        value: 3.11.1
+    autoDeploy: true
+    minInstances: 1
+    maxInstances: 1
     healthCheckPath: /
-    disk:
-      name: data
-      mountPath: /data
-      sizeGB: 1
-    scaling:
-      minInstances: 1
-      maxInstances: 1
-      targetMemoryPercent: 80
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: no-cache 
+    healthCheckTimeout: 5
+    preDeployCommand: echo "Stopping previous deployment before starting new one..."
+    sleepApplication: false 
