--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot>=20.0
-python-dotenv>=0.19.0
+python-telegram-bot==20.7
+python-dotenv==1.0.0
 httpx==0.25.2
-aiohttp>=3.8.0 
+aiohttp==3.9.1 
